# raspberry-pi-pico-test

./: CMakeLists.txt  LICENSE  README.md  example_auto_set_url.cmake
.github/workflows/: main.yml
src/: CMakeLists.txt  bittenpico.c  dev_lowlevel_loopback.py  flash_program.c  images.h  main.c  msc.c  msc_disk.c  msc_disk_dual.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h
